k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pupero-ingress
  namespace: pupero
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: pupero.replay.dog
      http:
        paths:
          - path: /_matrix(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pupero-matrix-synapse
                port:
                  number: 8008
          - path: /element(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pupero-element
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pupero-api-manager
                port:
                  number: 8000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: pupero-flask
                port:
                  number: 5000
